--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "scheme": "shelfieapp",
     "name": "shelfie_app_rn",
-    "slug": "shelfie_app_rn",
+    "slug": "shelfie",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -28,6 +28,13 @@
     },
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "a067a6d4-c310-4614-bdf1-f517dfcf798d"
+      }
+    },
+    "owner": "jazzdev"
   }
 }
