--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "dotenv": "^17.2.1",
     "expo": "~53.0.20",
     "expo-constants": "~17.1.7",
     "expo-linking": "~7.1.7",
